--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,10 +1,10 @@
 /* app shell CSS */
 :root {
-  --primary: #31a9e1;
+  --primary: #ff7700;
   --gray: #ececec;
   --whitesmoke: #f5f5f5;
-  --dark: #222;
-  --monoaki: #272822;
+  --dark: #302d39;
+  --monoaki: #232228;
   --navbar-height: 50px;
 }
 
